fix: change hover & overflow

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -418,7 +418,6 @@ img {
 .header {
   position: relative;
   width: 100%;
-  padding: 12px 0px;
   background-color: var(--color-gray-1);
   z-index: 100;
 }
@@ -468,7 +467,7 @@ img {
   display: flex;
   flex-direction: row;
   align-items: center;
-  gap: 40px;
+  gap: 20px;
 }
 
 .user__nav {
@@ -525,13 +524,21 @@ img {
   color: var(--color-dark-1);
   font-size: var(--fs-8);
   font-weight: var(--fw-2);
+  border-top: 3px solid transparent;
+  padding: 25px 20px 28px 20px;
+  transition: all 0.3s ease;
+}
+
+.menu__link:hover {
+  border-top: 3px solid var(--color-blue);
+  background: var(--color-white);
 }
 
 .sub-menu__list {
   display: none;
   position: absolute;
   left: 0;
-  top: 20px;
+  top: 55px;
   padding-top: 20px;
 }
 
@@ -567,13 +574,12 @@ img {
 
 .sub-submenu__item {
   display: none;
-  min-width: 100%;
+  max-width: 800px;
   height: 96%;
   position: absolute;
   top: 20px;
   left: 100%;
-  padding-left: 40px;
-  padding-top: 15px;
+  padding: 15px 20px 0px 40px;
   background: #f1f2f3;
   border: 1px solid rgba(0, 0, 0, 0.1);
 }
@@ -587,7 +593,7 @@ img {
 }
 
 .sub-submenu__card {
-  width: 274px;
+  min-width: 274px;
   height: 233px;
   display: flex;
   flex-direction: column;
@@ -598,6 +604,12 @@ img {
   text-align: center;
   border: 1px solid rgba(0, 0, 0, 0.1);
   background: #fff;
+  opacity: 0.5;
+  transition: opacity 0.3s ease;
+}
+
+.sub-submenu__card:hover {
+  opacity: 1;
 }
 
 .sub-submenu__card-text {
